--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div id="order">
-            <form action="mailto:abdullahij951@gmail.com" method="POST" enctype="text/plain"> 
+            <form action="mailto:olabamijiolatoyosi@gmail.com" method="POST" enctype="text/plain"> 
                 <div>
                     <h2>Fullname</h2>
                     <input type="text" name="name" class="details">
@@ -68,19 +68,22 @@
                     <h2>Order</h2>
                     <div id="orderList">
                         <div id="orl">
-                            Amaratus <input type="checkbox" name="amaratus"> amount <input type="number" name="num" class="num">
+                            Amaratus <input type="checkbox" name="amaratus"> amount <input type="number" name="num_of_amaratus" class="num">
                         </div>
                         <div id="orl">
-                            Amaratus <input type="checkbox" name="amaratus"> amount <input type="number" name="num" class="num">
+                            Amaratus <input type="checkbox" name="amaratus"> amount <input type="number" name="num_of_amaratus" class="num">
                         </div>
                         <div id="orl">
-                            Amaratus <input type="checkbox" name="amaratus"> amount <input type="number" name="num" class="num">
+                            Amaratus <input type="checkbox" name="amaratus"> amount <input type="number" name="num_of_amaratus" class="num">
                         </div>
                         <div id="orl">
-                            Amaratus <input type="checkbox" name="amaratus"> amount <input type="number" name="num" class="num">
+                            Amaratus <input type="checkbox" name="amaratus"> amount <input type="number" name="num_of_amaratus" class="num">
                         </div>
                         <div id="orl">
-                            Amaratus <input type="checkbox" name="amaratus"> amount <input type="number" name="num" class="num">
+                            Amaratus <input type="checkbox" name="amaratus"> amount <input type="number" name="num_of_amaratus" class="num">
+                        </div>
+                        <div id="orl">
+                            Amaratus <input type="checkbox" name="amaratus"> amount <input type="number" name="num_of_amaratus" class="num">
                         </div>
                     </div>
                 </div>
